[package]
name = "satus"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
log = "0.4.29"
uefi = { version = "0.36.1", features = ["logger", "alloc" ] }
x86_64 = { version = "0.15.4", default-features = false, features = [ "instructions" ] } 
satus-struct = { git = "https://github.com/dark-canvas/satus-struct" }
